# robotFarm

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  systemDependencies.json
.github/actions/normalize/: action.yaml
.github/workflows/: baseImageBuild.yaml  docker-image.yaml  generate_library_validation_workflows.py  imageBuild.yaml  infra-congruency-check.yaml  infraFilesCongruencyCheck.yaml  libraryBuild.yaml  robot-farm-base.yaml  robot-farm.yaml  validate-AMD-ubuntu-22-04-linux-clang-19.yaml  validate-AMD-ubuntu-22-04-linux-gnu-12.yaml  validate-AMD-ubuntu-22-04-linux-gnu-14.yaml  validate-AMD-ubuntu-22-04-linux-gnu-default.yaml  validate-AMD-ubuntu-24-04-linux-clang-19.yaml  validate-AMD-ubuntu-24-04-linux-gnu-12.yaml  validate-AMD-ubuntu-24-04-linux-gnu-14.yaml  validate-AMD-ubuntu-24-04-linux-gnu-default.yaml  validate-Boost-ubuntu-22-04-linux-clang-19.yaml  validate-Boost-ubuntu-22-04-linux-gnu-12.yaml  validate-Boost-ubuntu-22-04-linux-gnu-14.yaml  validate-Boost-ubuntu-22-04-linux-gnu-default.yaml  validate-Boost-ubuntu-24-04-linux-clang-19.yaml  validate-Boost-ubuntu-24-04-linux-gnu-12.yaml  validate-Boost-ubuntu-24-04-linux-gnu-14.yaml  validate-Boost-ubuntu-24-04-linux-gnu-default.yaml  validate-CAMD-ubuntu-22-04-linux-clang-19.yaml  validate-CAMD-ubuntu-22-04-linux-gnu-12.yaml  validate-CAMD-ubuntu-22-04-linux-gnu-14.yaml  validate-CAMD-ubuntu-22-04-linux-gnu-default.yaml  validate-CAMD-ubuntu-24-04-linux-clang-19.yaml  validate-CAMD-ubuntu-24-04-linux-gnu-12.yaml  validate-CAMD-ubuntu-24-04-linux-gnu-14.yaml  validate-CAMD-ubuntu-24-04-linux-gnu-default.yaml  validate-CCOLAMD-ubuntu-22-04-linux-clang-19.yaml  validate-CCOLAMD-ubuntu-22-04-linux-gnu-12.yaml  validate-CCOLAMD-ubuntu-22-04-linux-gnu-14.yaml  validate-CCOLAMD-ubuntu-22-04-linux-gnu-default.yaml  validate-CCOLAMD-ubuntu-24-04-linux-clang-19.yaml  validate-CCOLAMD-ubuntu-24-04-linux-gnu-12.yaml  validate-CCOLAMD-ubuntu-24-04-linux-gnu-14.yaml  (+171 more)
cmake/: BoostExternalProject.cmake  CeresSolverExternalProject.cmake  GlogExternalProject.cmake  OgreExternalProject.cmake  OpenCVExternalProject.cmake  SuiteSparseExternalProject.cmake
cmake/toolchains/: linux-clang-14.cmake  linux-clang-16.cmake  linux-clang-19.cmake  linux-clang-21.cmake  linux-clang-22.cmake  linux-gnu-12.cmake  linux-gnu-14.cmake  linux-gnu-default.cmake
cmake/toolchains/deprecated/: linux-clang-14.cmake  linux-clang-15.cmake
docker/: CMakeLists.txt  robotFarm-ubuntu.dockerfile  ubuntu.dockerfile
externalProjects/: AbseilExternalProject.cmake  BoostExternalProject.cmake  CapnprotoExternalProject.cmake  CeresSolverExternalProject.cmake  Eigen3ExternalProject.cmake  FlatBuffersExternalProject.cmake  GFlagsExternalProject.cmake  GlogExternalProject.cmake  GoogleTestExternalProject.cmake  NlohmannJsonExternalProject.cmake  OatppExternalProject.cmake  OatppWebSocketExternalProject.cmake  OgreExternalProject.cmake  OpenCVExternalProject.cmake  ProtobufExternalProject.cmake  Python3ExternalProject.cmake  SpdLogExternalProject.cmake  SuiteSparseExternalProject.cmake  VTKExternalProject.cmake
scripts/: extractDependencies.sh  systemDependencies.json
tools/: clang-format-14  clang-tidy-14  extractDependencies.sh  installCMake.sh  normalizeString.sh  quickBuild.sh
tools/apt/: addCompilerPPA.sh  addGNUSources.sh  addLLVMSources.sh  addNvidiaSources.sh  systemDependencies.json
